[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/adapters/ui/win_overlay.gd" id="1_5s64k"]

[node name="WinOverlay" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
visible = false
script = ExtResource("1_5s64k")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45)
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Content" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Content"]
text = "You Win!"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="PanelContainer/MarginContainer/Content"]
text = "Great job reaching the goal."
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="PanelContainer/MarginContainer/Content"]
text = "Replay"
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20

[node name="NextButton" type="Button" parent="PanelContainer/MarginContainer/Content"]
text = "Next (coming soon)"
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
